Bug 47621 - [ilk cpu edp] Dell Latitude E6510 laptop screen off
Summary: [ilk cpu edp] Dell Latitude E6510 laptop screen off
Status: RESOLVED PATCH_ALREADY_AVAILABLE
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - Intel) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_video-dri-intel@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-17 14:28 UTC by Ognjen Maric
Modified: 2012-12-22 09:21 UTC (History)
3 users (show)

See Also:
Kernel Version: 3.5.3
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
dmesg.log with drm.debug=0xe (83.03 KB, text/plain)
2012-09-17 14:30 UTC, Ognjen Maric
Details
drm/i915: use adjusted_mode instead of mode for checking the 6bpc force flag (2.38 KB, patch)
2012-10-01 13:44 UTC, Jani Nikula
Details | Diff

Description Ognjen Maric 2012-09-17 14:28:18 UTC
My built-in laptop screen does not turn on anymore with 3.5.3. External monitors work fine. Changing the resolution after the boot still does not turn it on. Under 3.4.9, everything works correctly. Some possibly useful outputs:

lspci -nn

00:02.0 VGA compatible controller [0300]: Intel Corporation Core Processor Integrated Graphics Controller [8086:0046] (rev 02)

xrandr -q

eDP1 connected 1600x900+0+1200 (normal left inverted right x axis y axis) 344mm x 194mm
   1600x900       60.0*+   40.0  
   1024x768       60.0  
   800x600        60.3     56.2  
   640x480        59.9  

I'm attaching the dmesg log with drm.debug=0xe too.
Comment 1 Ognjen Maric 2012-09-17 14:30:12 UTC
Created attachment 80431 [details]
dmesg.log with drm.debug=0xe
Comment 2 Daniel Vetter 2012-09-17 15:41:26 UTC
I've just merged some cpu edp fixes. Can you please try the latest drm-intel-next-branch from

http://cgit.freedesktop.org/~danvet/drm-intel

If that doesn't help, a bisect would be highly appreciated - eDP is unfortunately a fickle beast :(
Comment 3 Ognjen Maric 2012-09-18 12:27:41 UTC
Unfortunately the problem still persists with the drm-intel-next. I'll do a bisect in the following days.
Comment 4 Daniel Vetter 2012-09-19 09:20:00 UTC
Oops, you actually need to test the drm-intel-next-queued branch, only that one has the latest set of eDP fixes. Sorry for the confusion.
Comment 5 Ognjen Maric 2012-09-19 14:43:25 UTC
Tested that branch too now, the problem persists :(
Comment 6 Ognjen Maric 2012-09-25 13:23:41 UTC
After bisecting, the offending commit seems to be:

4344b813f105a19f793f1fd93ad775b784648b95
Comment 7 Daniel Vetter 2012-09-25 14:06:06 UTC
Just to confirm the bisect, can you please test the revert on top of latest drm-intel-next (-queued has some newer patches that will conflict) from the git repo I've linked to previously?
Comment 8 Ognjen Maric 2012-09-25 16:55:44 UTC
Confirmed against the latest drm-intel-next. The bug still exists, reverting the commit fixes it.
Comment 9 Jani Nikula 2012-09-26 14:02:55 UTC
Please try the for-ognjen branch of git://gitorious.org/jani/drm.git and report back. It's drm-intel-next-queued plus the fix. Thanks.
Comment 10 Ognjen Maric 2012-09-26 15:20:12 UTC
Seems to work fine now. Thanks a lot to everybody involved for the quick fix!
Comment 11 Jani Nikula 2012-10-01 13:44:19 UTC
Created attachment 81781 [details]
drm/i915: use adjusted_mode instead of mode for checking the  6bpc force flag

The patch that fixed the issue for posterity.
Comment 12 Daniel Vetter 2012-10-01 14:21:23 UTC
Fix merged into drm-intel-fixes, thanks for reporting this issue:

commit 0c96c65b48fba3ffe9822a554cbc0cd610765cd5
Author: Jani Nikula <jani.nikula@intel.com>
Date:   Wed Sep 26 18:43:10 2012 +0300

    drm/i915: use adjusted_mode instead of mode for checking the 6bpc force flag
Comment 13 Florian Mickler 2012-12-22 09:21:21 UTC
A patch referencing a commit referencing this bug report has been merged in Linux v3.8-rc1:

commit c8241969b44438c9335b59d375b627214bc36483
Author: Jani Nikula <jani.nikula@intel.com>
Date:   Fri Nov 2 10:19:55 2012 +0200

    drm/i915: pass adjusted_mode to intel_choose_pipe_bpp_dither(), again

Note You need to log in before you can comment on or make changes to this bug.